--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,21 @@
-site_name: 始于足下
+site_name: Keep
 theme:
   name: material
   logo: assets/pp.png
-  favicon: assets/pp.png
+  favicon: images/pp.png
+  features:
+    - navigation.tabs
+    - navigation.path
+    - toc.integrate
+plugins:
+  - search:
+    lang: 
+      - zh
+      - en
+  - social:
+      cards_layout: default/variant
+  - blog:
+      blog_toc: true
+      post_date_format: full
+      post_url_date_format: yyyy/MM/dd
+
