--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Keep
 theme:
   name: material
   logo: assets/pp.png
-  favicon: images/pp.png
+  favicon: images/pp.ico
   features:
     - navigation.tabs
     - navigation.path
